# lakitu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
lakitu/datasets/: dataset.py  format.py  vidindex.py  write.py
lakitu/env/: core.py  defs.py  games.py  gym.py  hooks.py  loader.py  platforms.py  run.py
lakitu/env/lib/: build.sh  mupen64plus.cfg
lakitu/env/lib/mupen64plus-input-ext/projects/unix/: Makefile
lakitu/env/lib/mupen64plus-input-ext/src/: plugin.c
lakitu/training/: eval.py  train.py
lakitu/training/diffusion/: eval.py  policy.py  train.py
lakitu/training/distance/: model.py  train.py
lakitu/training/helpers/: checkpoint.py  config.py  metrics.py  wandb.py
lakitu/training/models/: diffusion.py
tests/: test_dataset.py  test_dataset_format.py
