[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakitu"
version = "0.1.0"
description = "A gymnasium environment for Nintendo 64"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mitchell", email = "mitchellgoffpc@gmail.com"}
]
dependencies = [
    "glfw",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["lakitu"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B"]
ignore = []
exclude = ["lakitu/env/lib/"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
