[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakitu"
version = "0.1.0"
description = "A gymnasium environment for Nintendo 64"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Mitchell", email = "mitchellgoffpc@gmail.com"}
]
dependencies = [
    "glfw",
    "gymnasium",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["lakitu"]

[tool.ruff]
line-length = 140
target-version = "py38"
exclude = ["lakitu/env/lib/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["I001", "N812", "N813"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
explicit_package_bases = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
platform = "win32"
cache_dir = "/dev/null"
exclude = ["^lakitu/env/lib"]

[[tool.mypy.overrides]]
module = "glfw"
ignore_missing_imports = true
