[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakitu"
version = "0.1.0"
description = "A gymnasium environment for Nintendo 64"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mitchell Goff", email = "mitchellgoffpc@gmail.com"}
]
dependencies = [
    "av",
    "einops",
    "glfw",
    "gymnasium",
    "numpy",
    "omegaconf",
    "safetensors",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "opencv-python",
    "pygame",
    "wandb",
]

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = ["lakitu/env/lib/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["I001", "N812", "N813"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
explicit_package_bases = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
platform = "win32"
cache_dir = "/dev/null"
exclude = ["^lakitu/env/lib"]

[[tool.mypy.overrides]]
module = "glfw,hid,torchvision,wandb"
ignore_missing_imports = true
